# micro-kernel-backend

./: Cargo.toml  README.md
docs/: BUILDING_MODULES.md  README.md  SUMMARY.md  api.md  architecture.md  blue-green.md  dashboard.md  modules.md  services.md
server/: Cargo.toml
server/src/: dashboard.rs  guard.rs  lib.rs  main.rs  middleware.rs  registry.rs  resource.rs  scope.rs  services.rs  watcher.rs
server/src/engine/: host_funcs.rs  mod.rs  wasm_config.rs
server/src/providers/: http_client.rs  mod.rs  mysql.rs  postgres.rs  redis_provider.rs  s3.rs
server/static/: dashboard.html
server/tests/: wasm_integration.rs
test-module/: Cargo.toml
test-module/src/: lib.rs
wasm-module/: Cargo.toml  README.md
wasm-module/src/: lib.rs
