[package]
name = "wasm-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
dotenv = "0.15.0"
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.52.3"
wasmtime = "43.0.2"
wasm-module = { path = "../wasm-module" }

# ── Real service providers ──────────────────────────────────────────────
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql"] }
redis = { version = "0.28", features = ["tokio-comp"] }
ureq = { version = "2", features = ["json"] }
